tests/miniJava/neg/001536_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new System.out.println ( ) ; } }
